# Neocr

./: .gitignore  README.md  pyproject.toml
neocr/: __init__.py  main.py
