[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neocr"
version = "0.1.0"
description = "OCR tool with screenshot selection using Ollama"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Neolex", email = "kevin@neolex.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ollama-ocr",
    "mss",
    "pyperclip",
    "Pillow",
    "requests",
    "PySide6",
]

[project.scripts]
neocr = "neocr.main:main"

[tool.setuptools]
packages = ["neocr"]

